--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
 deploy:
   provider: releases
   api_key: "${GH_TOKEN}"
-  file: dist/*
+  file: "dist/*"
   skip_cleanup: true
   on:
     tags: true
