--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,6 @@ script:
   - npm run build
 
 before_deploy:
-- ls -la
 - tar -zcvf build-${TRAVIS_TAG}.tar.gz dist
 
 deploy:
@@ -21,3 +20,5 @@ deploy:
   api_key: "${GH_TOKEN}"
   file: "build-${TRAVIS_TAG}.tar.gz"
   skip_cleanup: true
+  on:
+    tags: true
