--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~8.2.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "angular-6-datatable": "^0.8.0",
+    "angular-highcharts": "^8.0.3",
     "bootstrap": "^4.3.1",
+    "highcharts": "^7.1.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
