--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   npm install
 
 script:
-  - npm run build
+  - npm run build --prod
 
 before_deploy:
 - tar -zcvf build-${TRAVIS_TAG}.zip dist
